--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -11,8 +11,8 @@
             <strong>{{ boldmessage }}</strong><br/>
         </div>
         <div>
-            <a href="/rango/about/">About</a><br/>
-            <img src="{% static 'images/emoji.png' %}"
+            <a href="/rango/about/">About</a><br />
+            <img src="{% static "images/rango.jpg" %}"
                  alt="Picture of Rango"/>
         </div>
     </body>
